<resources>
    <string name="app_name">GeoExplorer</string>
    <string name="sign">SIGN UP</string>
    <string name="sign_in">SIGN IN</string>
    <string name="log">LOG IN</string>
    <string name="next">CONTINUE</string>
    <string name="forgot">FORGOT PASSWORD</string>
    <string name="course">Course</string>
    <string name="history">History</string>
    <string name="profil">Profil</string>
    <string name="notification">Notification</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="distance">Distance</string>
    <string name="difficulty">Difficulty</string>
    <string name="interests">Interests</string>
    <string name="rating">Rating</string>
    <string name="disponibility">Disponibility</string>
    <string name="times">Times</string>
    <string name="chat">Chat</string>
    <string name="photos">Photos</string>
    <string name="friends">Friends</string>
    <string name="create">CREATE</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="feed">Feed</string>
</resources>