<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_course_search">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textColorHint="#FFFFFF"
            app:hintTextColor="#FFFFFF"
            app:startIconDrawable="@drawable/ic_search"
            app:startIconTint="#FFFFFF">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:fontFamily="@font/montserrat"
                android:hint="@string/search"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginTop="30dp"
            android:background="@drawable/ic_bg_textfield"
            android:gravity="center">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <Button
                    android:id="@+id/button6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:backgroundTint="#FFFFFF"
                    app:icon="@drawable/ic_walking_solid"
                    app:iconGravity="textTop"
                    app:iconSize="30dp"
                    app:iconTint="#25BF72" />

                <Button
                    android:id="@+id/button7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:backgroundTint="#FFFFFF"
                    app:icon="@drawable/ic_flag_checkered_solid"
                    app:iconGravity="textTop"
                    app:iconSize="30dp"
                    app:iconTint="#25413E" />

                <Button
                    android:id="@+id/button8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    app:backgroundTint="#FFFFFF"
                    app:icon="@drawable/ic_heart"
                    app:iconGravity="textTop"
                    app:iconSize="30dp"
                    app:iconTint="#46C2A4" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center"
                    android:text="@string/distance" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center"
                    android:text="@string/difficulty" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center"
                    android:text="@string/interests" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:gravity="center">

                <Button
                    android:id="@+id/button9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    app:backgroundTint="#FFFFFF"
                    app:icon="@drawable/ic_star_regular"
                    app:iconGravity="textTop"
                    app:iconSize="30dp"
                    app:iconTint="#39AEAA" />

                <Button
                    android:id="@+id/button10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    app:backgroundTint="#FFFFFF"
                    app:icon="@drawable/ic_calendar_alt"
                    app:iconGravity="textTop"
                    app:iconSize="30dp"
                    app:iconTint="#5D5D5D" />

                <Button
                    android:id="@+id/button11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    app:backgroundTint="#FFFFFF"
                    app:icon="@drawable/ic_clock"
                    app:iconGravity="textTop"
                    app:iconSize="30dp"
                    app:iconTint="#39AEAA" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center"
                    android:text="@string/rating" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/disponibility" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/times" />
            </TableRow>

        </TableLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>